# python-appsync-ws-client

./: README.md  setup.cfg  setup.py
appsync_ws_client/:  __init__.py  client.py
tests/: test_appsync_ws_client.py
