[metadata]
name = appsync_ws_client
version = 0.1.0
author = Dhinesh Kumar Sundaram
author_email = dhinesh.gs@gmail.com
description = A package for connecting to AWS AppSync WebSocket API using graphql subscriptions
license = MIT
home-page = https://github.com/dhinesh03/python-appsync-ws-client
[aliases]
test=pytest
[flake8]
max-line-length=120